# oxdoc

./: .editorconfig  .gitignore  .markdown-link-check.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh  package.json
.agents/: product-marketing-context.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
crates/oxdoc-cli/: Cargo.toml  README.md
crates/oxdoc-cli/src/: main.rs  update.rs  xlsx_schema.rs
crates/oxdoc-cli/tests/: cli.rs
crates/oxdoc-core/: Cargo.toml  README.md
crates/oxdoc-core/benches/: throughput.rs
crates/oxdoc-core/examples/: extract_text.rs  xlsx_csv.rs  xlsx_rows.rs
crates/oxdoc-core/src/: error.rs  lib.rs  models.rs  vfs.rs
crates/oxdoc-core/src/parsers/: audit.rs  docx.rs  metadata.rs  mod.rs  pptx.rs  xlsx.rs  xlsx_shared_strings.rs
crates/oxdoc-core/tests/: api.rs  schema.rs
crates/oxdoc-tabular/: Cargo.toml
crates/oxdoc-tabular/examples/: xlsx_to_parquet.rs
crates/oxdoc-tabular/src/: lib.rs  xlsx_schema.rs
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  architecture.md  audit.md  cli.md  contributing.md  errors-and-warnings.md  faq.md  getting-started.md  index.html  installation.md  json-output.md  launch-publicity.md  library-api.md  ooxml-model.md  performance-competitors.md  performance-memory-baselines.md  performance.md  python-integration.md  release-process.md  roadmap.md  security.md  testing.md
docs/formats/: docx.md  metadata.md  pptx.md  xlsx.md
docs/schemas/v1/: oxdoc-all-sheets-manifest.schema.json  oxdoc-audit-jsonl.schema.json  oxdoc-extract-text.schema.json  oxdoc-info.schema.json  oxdoc-structured-text.schema.json  oxdoc-xlsx-rows-jsonl.schema.json  oxdoc-xlsx-schema.schema.json
docs/spikes/: xlsx-arrow-parquet.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: docx_text.rs  metadata.rs  relationships.rs  xlsx_shared_strings.rs  xlsx_sheet.rs
python/: README.md  pyproject.toml
python/src/oxdoc/: __init__.py  client.py
python/tests/: test_oxdoc.py
schemas/v1/: oxdoc-all-sheets-manifest.schema.json  oxdoc-audit.schema.json  oxdoc-docx-tables.schema.json  oxdoc-extract-text.schema.json  oxdoc-info.schema.json
scripts/: competitor-workbench.py  peak-memory-baselines.py  render-homebrew-formula.sh
tests/: homebrew_formula.sh  install.sh
tests/fixtures/: README.md  mod.rs
tests/fixtures/corpus/docx/basic/: [Content_Types].xml
tests/fixtures/corpus/docx/basic/_rels/: .rels
tests/fixtures/corpus/docx/basic/docProps/: app.xml
tests/fixtures/corpus/docx/basic/word/: document.xml
tests/fixtures/corpus/docx/external-target/: [Content_Types].xml
tests/fixtures/corpus/docx/external-target/_rels/: .rels
tests/fixtures/corpus/pptx/basic/: [Content_Types].xml
tests/fixtures/corpus/pptx/basic/_rels/: .rels
tests/fixtures/corpus/pptx/basic/docProps/: app.xml  core.xml
tests/fixtures/corpus/pptx/basic/ppt/: presentation.xml
tests/fixtures/corpus/pptx/basic/ppt/_rels/: presentation.xml.rels
tests/fixtures/corpus/pptx/basic/ppt/slides/: slide1.xml
tests/fixtures/corpus/pptx/text/: [Content_Types].xml
tests/fixtures/corpus/pptx/text/_rels/: .rels
tests/fixtures/corpus/pptx/text/ppt/: presentation.xml
tests/fixtures/corpus/pptx/text/ppt/_rels/: presentation.xml.rels
tests/fixtures/corpus/pptx/text/ppt/notesSlides/: notesSlide2.xml
tests/fixtures/corpus/pptx/text/ppt/slides/: slide1.xml  slide2.xml
tests/fixtures/corpus/pptx/text/ppt/slides/_rels/: slide2.xml.rels
tests/fixtures/corpus/xlsx/app-metadata/: [Content_Types].xml
tests/fixtures/corpus/xlsx/app-metadata/docProps/: app.xml
tests/fixtures/corpus/xlsx/basic/: [Content_Types].xml
tests/fixtures/corpus/xlsx/basic/docProps/: app.xml  core.xml
tests/fixtures/corpus/xlsx/basic/xl/: sharedStrings.xml  workbook.xml
tests/fixtures/corpus/xlsx/basic/xl/worksheets/: sheet1.xml
tests/fixtures/docx/: README.md
tests/fixtures/docx/malformed-table/: document.xml  expected.json
tests/fixtures/docx/related-parts/: expected.json
tests/fixtures/docx/related-parts/package/: [Content_Types].xml
tests/fixtures/docx/related-parts/package/word/: comments.xml  document.xml  endnotes.xml  footer1.xml  footnotes.xml  header1.xml
tests/fixtures/docx/related-parts/package/word/_rels/: document.xml.rels
tests/fixtures/docx/table-semantics/: document.xml  expected.json
tests/fixtures/files/docx/: python-docx-basic.docx
tests/fixtures/files/pptx/: python-pptx-basic.pptx
tests/fixtures/files/xlsx/: openpyxl-basic.xlsx
tests/fixtures/provenance/: docx-basic.md  docx-external-target.md  docx-malformed-table.md  docx-python-docx-basic.md  docx-related-parts-tables.md  docx-table-semantics.md  pptx-basic.md  pptx-python-pptx-basic.md  pptx-text.md  xlsx-app-metadata.md  xlsx-basic.md  xlsx-openpyxl-basic.md
tests/fixtures/snapshots/: all_sheets_manifest.json  cli_audit_json.json  cli_extract_csv.txt  cli_extract_text_json.json  cli_info_json.json  cli_info_text.txt  cli_structured_text_json.json  docx_basic_text.txt  docx_external_target_error.txt  docx_python_docx_text.txt  pptx_basic_info.json  pptx_python_pptx_text.txt  pptx_text.txt  xlsx_basic_csv.txt  xlsx_cell_types_csv.txt  xlsx_openpyxl_csv.txt
tests/fixtures/tools/: generate_application_fixtures.py
