[workspace]
members = ["crates/oxdoc-core", "crates/oxdoc-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zip = { version = "6.0", default-features = false, features = ["deflate"] }

