[workspace]
members = ["crates/oxdoc-core", "crates/oxdoc-cli"]
resolver = "3"

[workspace.package]
authors = ["Santiago Pereyra Marchetti"]
description = "Fast OOXML text, CSV, and metadata extractor"
edition = "2024"
homepage = "https://github.com/spereyra-dev/oxdoc"
keywords = ["docx", "xlsx", "ooxml", "parser", "cli"]
categories = ["command-line-utilities", "parser-implementations"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spereyra-dev/oxdoc"
rust-version = "1.88"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
