[package]
name = "oxdoc-cli"
version = "0.1.0"
authors.workspace = true
description = "Command-line interface for oxdoc"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "oxdoc"
path = "src/main.rs"

[dependencies]
clap.workspace = true
oxdoc-core = { path = "../oxdoc-core" }
serde.workspace = true
serde_json.workspace = true
