[package]
name = "oxdoc-core"
version = "1.1.0"
authors.workspace = true
description = "Core OOXML parsing library for oxdoc"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
include = ["Cargo.toml", "README.md", "src/**", "examples/**", "benches/**"]

[dependencies]
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
criterion = "0.8"
serde_json.workspace = true

[[bench]]
name = "throughput"
harness = false
