[package]
name = "oxdoc-tabular"
version = "0.1.0"
authors.workspace = true
description = "Experimental Arrow and Parquet adapter for oxdoc XLSX rows"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
arrow-array = "59.0.0"
arrow-schema = "59.0.0"
oxdoc-core = { path = "../oxdoc-core", version = "1.1.0" }
parquet = { version = "59.0.0", default-features = false, features = ["arrow"] }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
bytes = "1"
serde_json.workspace = true
zip.workspace = true
